--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -53,3 +53,10 @@
 	font-weight: 700;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: "Poppins";
+	src: url(../fonts/Poppins-regular.ttf);
+	font-weight: 700;
+	font-style: normal;
+}
