--- a/app/css/main.css
+++ b/app/css/main.css
@@ -50,6 +50,12 @@
   font-weight: 700;
   font-style: normal; }
 
+@font-face {
+  font-family: "Poppins";
+  src: url(../fonts/Poppins-regular.ttf);
+  font-weight: 700;
+  font-style: normal; }
+
 * {
   padding: 0;
   margin: 0;
@@ -57,4 +63,350 @@
           box-sizing: border-box; }
 
 .wrapper {
-  overflow: hidden; }
+  overflow: hidden;
+  font-family: 'Proxima Nova', sans-serif;
+  font-size: 18px;
+  min-height: 100vh; }
+
+a {
+  text-decoration: none; }
+
+.container {
+  width: 1440px;
+  margin: 0 auto; }
+
+.header-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 29px 41px;
+  background: #F9F9F9; }
+  .header-wrapper-item-row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .header-wrapper-item-row__text {
+      font-size: 14px;
+      margin-left: 10px; }
+    .header-wrapper-item-row__link {
+      color: #000; }
+    .header-wrapper-item-row:first-child {
+      margin-bottom: 18px; }
+  .header-wrapper-item-lang {
+    color: #A7A7A7;
+    padding: 7px 15px;
+    border: 1px solid #A7A7A7;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-border-radius: 0 0 10px 0;
+            border-radius: 0 0 10px 0; }
+    .header-wrapper-item-lang:first-child {
+      -webkit-border-radius: 0 0 0 10px;
+              border-radius: 0 0 0 10px;
+      border-right: none; }
+    .header-wrapper-item-lang.active {
+      color: #000; }
+  .header-wrapper-item-list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .header-wrapper-item-list_width1 {
+      width: 543px; }
+    .header-wrapper-item-list_width2 {
+      width: 207px; }
+    .header-wrapper-item-list-item {
+      color: #000;
+      position: relative; }
+      .header-wrapper-item-list-item_red-hover:before {
+        content: '';
+        width: 0%;
+        position: absolute;
+        display: block;
+        bottom: -10px;
+        left: 0px;
+        height: 2px;
+        background: #D71921;
+        -webkit-transition: 0.5s;
+        -o-transition: 0.5s;
+        transition: 0.5s; }
+      .header-wrapper-item-list-item_red-hover:hover:before {
+        width: 100%; }
+      .header-wrapper-item-list-item__count {
+        position: absolute;
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
+        width: 24px;
+        height: 24px;
+        color: #FFF;
+        background: #D71921;
+        -webkit-border-radius: 50%;
+                border-radius: 50%;
+        font-size: 14px;
+        font-family: 'Poppins', sans-serif;
+        bottom: -webkit-calc(100% - 12px);
+        bottom: calc(100% - 12px);
+        left: -webkit-calc(100% + 0px);
+        left: calc(100% + 0px); }
+  .header-wrapper-item_absoluted {
+    position: absolute;
+    top: 0;
+    right: 83px;
+    height: 29px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
+
+.header-nav {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-top: 1px solid #DEDEDE;
+  border-bottom: 1px solid #DEDEDE;
+  -webkit-box-shadow: 0px 3px 10px #DEDEDE;
+          box-shadow: 0px 3px 10px #DEDEDE;
+  background: #FFF;
+  height: 50px; }
+  .header-nav-list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    padding: 0 13px;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s; }
+    .header-nav-list.active {
+      opacity: 0;
+      -webkit-box-flex: 0;
+      -webkit-flex: 0 1 0%;
+          -ms-flex: 0 1 0%;
+              flex: 0 1 0%;
+      overflow: hidden; }
+    .header-nav-list-ul-outter {
+      width: 100%; }
+    .header-nav-list-item {
+      width: 127px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-border-radius: 5px;
+              border-radius: 5px;
+      cursor: pointer;
+      opacity: 0.5;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s; }
+      .header-nav-list-item.active {
+        opacity: 1;
+        background: #E8D8BE; }
+      .header-nav-list-item-ul {
+        display: none;
+        width: 100%;
+        padding: 25px 40px; }
+        .header-nav-list-item-ul.active {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex; }
+        .header-nav-list-item-ul-side {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-flex: 0;
+          -webkit-flex: 0 1 50%;
+              -ms-flex: 0 1 50%;
+                  flex: 0 1 50%;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+          -webkit-flex-direction: column;
+              -ms-flex-direction: column;
+                  flex-direction: column; }
+          .header-nav-list-item-ul-side-head {
+            font-size: 24px;
+            font-weight: 300;
+            font-family: 'Roboto Light', sans-serif;
+            margin-bottom: 10px; }
+          .header-nav-list-item-ul-side-ul {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+            -webkit-flex-wrap: wrap;
+                -ms-flex-wrap: wrap;
+                    flex-wrap: wrap; }
+            .header-nav-list-item-ul-side-ul-item {
+              -webkit-box-flex: 0;
+              -webkit-flex: 0 1 50%;
+                  -ms-flex: 0 1 50%;
+                      flex: 0 1 50%;
+              display: -webkit-box;
+              display: -webkit-flex;
+              display: -ms-flexbox;
+              display: flex;
+              -webkit-box-align: center;
+              -webkit-align-items: center;
+                  -ms-flex-align: center;
+                      align-items: center;
+              height: 61px;
+              margin-bottom: 10px;
+              cursor: pointer; }
+              .header-nav-list-item-ul-side-ul-item__icon {
+                margin-right: 15px; }
+              .header-nav-list-item-ul-side-ul-item__text {
+                font-size: 18px;
+                font-family: 'Roboto Light', sans-serif; }
+      .header-nav-list-item_red {
+        color: #FF0000; }
+      .header-nav-list-item:hover {
+        background: #E8D8BE;
+        opacity: 1; }
+  .header-nav-search-bar {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    padding: 0 0 0 22px;
+    border-left: 1px solid #DEDEDE;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s; }
+    .header-nav-search-bar.active {
+      -webkit-box-pack: start;
+      -webkit-justify-content: flex-start;
+          -ms-flex-pack: start;
+              justify-content: flex-start;
+      border-left: 1px solid transparent; }
+    .header-nav-search-bar__search-input {
+      border: none;
+      outline: none;
+      font-size: 18px;
+      color: #8B8B8B;
+      margin-left: 10px; }
+      .header-nav-search-bar__search-input.active {
+        border-left: 1px solid #646464;
+        padding-left: 10px; }
+    .header-nav-search-bar_wrapper {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: stretch;
+      -webkit-align-items: stretch;
+          -ms-flex-align: stretch;
+              align-items: stretch;
+      -webkit-box-flex: 0;
+      -webkit-flex: 0 1 271px;
+          -ms-flex: 0 1 271px;
+              flex: 0 1 271px;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s; }
+      .header-nav-search-bar_wrapper.active {
+        -webkit-box-flex: 1;
+        -webkit-flex: 1;
+            -ms-flex: 1;
+                flex: 1;
+        padding: 0 0 0 183px; }
+  .header-nav-list-ul-outter {
+    display: block;
+    position: absolute;
+    top: 100%; }
+
+.arrow-down {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  margin-left: 10px;
+  -webkit-transform: rotate(-45deg) translateY(-30%);
+      -ms-transform: rotate(-45deg) translateY(-30%);
+          transform: rotate(-45deg) translateY(-30%);
+  border-bottom: 1px solid #201F1F;
+  border-left: 1px solid #201F1F; }
+  .arrow-down_red {
+    border-bottom: 1px solid #FF0000;
+    border-left: 1px solid #FF0000; }
