main-page: added gallery

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -72,8 +72,12 @@ a {
   text-decoration: none; }
 
 .container {
-  width: 1440px;
+  max-width: 1440px;
   margin: 0 auto; }
+
+.header {
+  position: relative;
+  z-index: 20; }
 
 .header-wrapper {
   display: -webkit-box;
@@ -203,6 +207,7 @@ a {
 
 .header-nav {
   position: relative;
+  z-index: 2;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -246,7 +251,15 @@ a {
               flex: 0 1 0%;
       overflow: hidden; }
     .header-nav-list-ul-outter {
-      width: 100%; }
+      width: 100%;
+      z-index: 1;
+      background: #FFF;
+      overflow: hidden; }
+      .header-nav-list-ul-outter__shadow {
+        -webkit-box-shadow: 0px 0px 10px 3px #DEDEDE;
+                box-shadow: 0px 0px 10px 3px #DEDEDE;
+        height: 1px;
+        border-top: 1px solid #DEDEDE; }
     .header-nav-list-item {
       width: 127px;
       display: -webkit-box;
@@ -351,16 +364,16 @@ a {
         -ms-flex: 1;
             flex: 1;
     padding: 0 0 0 22px;
-    border-left: 1px solid #DEDEDE;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s; }
+    border-left: 1px solid #DEDEDE; }
     .header-nav-search-bar.active {
       -webkit-box-pack: start;
       -webkit-justify-content: flex-start;
           -ms-flex-pack: start;
               justify-content: flex-start;
-      border-left: 1px solid transparent; }
+      border-left: 1px solid transparent;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s; }
     .header-nav-search-bar__search-input {
       border: none;
       outline: none;
@@ -382,16 +395,16 @@ a {
       -webkit-box-flex: 0;
       -webkit-flex: 0 1 271px;
           -ms-flex: 0 1 271px;
-              flex: 0 1 271px;
-      -webkit-transition: 0.5s;
-      -o-transition: 0.5s;
-      transition: 0.5s; }
+              flex: 0 1 271px; }
       .header-nav-search-bar_wrapper.active {
         -webkit-box-flex: 1;
         -webkit-flex: 1;
             -ms-flex: 1;
                 flex: 1;
-        padding: 0 0 0 183px; }
+        padding: 0 0 0 183px;
+        -webkit-transition: 0.5s;
+        -o-transition: 0.5s;
+        transition: 0.5s; }
   .header-nav-list-ul-outter {
     display: block;
     position: absolute;
@@ -410,3 +423,76 @@ a {
   .arrow-down_red {
     border-bottom: 1px solid #FF0000;
     border-left: 1px solid #FF0000; }
+
+.slider-wrapper {
+  height: 550px;
+  position: relative; }
+
+.first-slider__arrow-next, .first-slider__arrow-prev {
+  opacity: 0.4;
+  position: absolute;
+  z-index: 10;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer; }
+  .first-slider__arrow-next:hover, .first-slider__arrow-prev:hover {
+    opacity: 1; }
+
+.first-slider__arrow-next {
+  right: 10px; }
+
+.first-slider__arrow-prev {
+  left: 10px; }
+
+.first-slider-item {
+  outline: none;
+  max-height: 500px; }
+  .first-slider-item img {
+    height: 100%;
+    width: 100%;
+    margin: 0 auto; }
+
+.slick-dots {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+  .slick-dots li {
+    list-style: none;
+    margin-right: 12px; }
+    .slick-dots li:last-child {
+      margin-right: 0px; }
+    .slick-dots li button {
+      border: 2px solid #FFF;
+      background: transparent;
+      width: 18px;
+      height: 18px;
+      -webkit-border-radius: 50%;
+              border-radius: 50%;
+      font-size: 0;
+      cursor: pointer;
+      outline: none;
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s; }
+  .slick-dots .slick-active button {
+    background: #FFF; }
