--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -60,3 +60,8 @@
 	font-weight: 700;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: "Proxima Nova Extrabold";
+	src: url(../fonts/ProximaNovaExtrabld.ttf);
+}
